--- a/practice-03/pricing.html
+++ b/practice-03/pricing.html
@@ -41,10 +41,10 @@
                 <a class="nav-link active" aria-current="page" href="./index.html">Product</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Company</a>
+                <a class="nav-link active" aria-current="page" href="./index.html">Company</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Pricing</a>
+                <a class="nav-link active" aria-current="page" href="#">Pricing</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="./index.html">Recourses</a>
@@ -74,8 +74,8 @@
       <section class="main-introduce pt-3 pt-lg-5 pb-3 pb-lg-4">
           <div class="container">
               <div class=" row-cols-lg-2 d-lg-flex justify-content-between align-items-end  " tabindex="-1">
-                  <h1 class="display-1 col-md-7 col-lg-6-50 pb-3 pb-lg-0">
-                      <a class=">Choose the right plan</a> for your business
+                  <h1 class="display-1 col-md-7 col-lg-6 text-black-50 pb-3 pb-lg-0">
+                      <a class="text-black">Choose the right plan</a> for your business
                   </h1>
                   <p class="fs-6 col-lg-3 pn-5 pb-lg-0">
                       Built with love for growing businesses. Check out the Yoora CRM pricing grid below. Switch between plans at any time.
@@ -139,25 +139,25 @@
                   </li>
                   <li class="mb-3 d-flex align-items-center opacity-25">
                     <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
-                    <p class="text-decoration-line-through-50">
+                    <p class="text-decoration-line-through text-black-50">
                       Marketing Automation
                     </p>
                   </li>
                   <li class="mb-3 d-flex align-items-center opacity-25">
                     <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
-                    <p class="text-decoration-line-through-50">
+                    <p class="text-decoration-line-through text-black-50">
                       Custom Deal Tracks
                     </p>
                   </li>
                   <li class="mb-3 d-flex align-items-center opacity-25">
                     <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
-                    <p class="text-decoration-line-through-50">
+                    <p class="text-decoration-line-through text-black-50">
                       Automated Voicemails
                     </p>
                   </li>
                   <li class="mb-3 d-flex align-items-center opacity-25">
                     <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
-                    <p class="text-decoration-line-through-50">
+                    <p class="text-decoration-line-through text-black-50">
                       Post-call Automation
                     </p>
                   </li>
@@ -226,13 +226,13 @@
                   </li>
                   <li class="mb-3 d-flex align-items-center opacity-25">
                     <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
-                    <p class="text-decoration-line-through-50">
+                    <p class="text-decoration-line-through text-black-50">
                       Automated Voicemails
                     </p>
                   </li>
                   <li class="mb-3 d-flex align-items-center opacity-25">
                     <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
-                    <p class="text-decoration-line-through-50">
+                    <p class="text-decoration-line-through text-black-50">
                       Post-call Automation
                     </p>
                   </li>
@@ -451,7 +451,7 @@
                 </a>
               </div>
               <div class="card-body mt-3">
-                <p class="fs-6 text-black">
+                <p class="fs-6">
                   We built an elegant solution.<br> Our team created a fully integrated sales<br> and marketing solution for SMBs
                 </p>
               </div>
