--- a/practice-03/pricing.html
+++ b/practice-03/pricing.html
@@ -41,16 +41,16 @@
                 <a class="nav-link active" aria-current="page" href="./index.html">Product</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Company</a>
+                <a class="nav-link active" aria-current="page" href="#">Company</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Recourses</a>
+                <a class="nav-link active" aria-current="page" href="#">Recourses</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Contact</a>
+                <a class="nav-link active" aria-current="page" href="#">Contact</a>
               </li>
             </ul>
             <button type="button" class="btn btn-primary me-2">Log In</button>
@@ -69,7 +69,7 @@
   <!-------------------
      main
     --------------------->
-    <main class="main">
+    <main class="pricing-page">
       <!-- introduce -->
       <section class="main-introduce pt-3 pt-lg-5 pb-3 pb-lg-4">
           <div class="container">
@@ -451,7 +451,7 @@
                 </a>
               </div>
               <div class="card-body mt-3">
-                <p class="fs-6">
+                <p class="fs-6 text-black">
                   We built an elegant solution.<br> Our team created a fully integrated sales<br> and marketing solution for SMBs
                 </p>
               </div>
