Update main practice-02

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -74,14 +74,14 @@
   <!-------------------
    main
   --------------------->
-  <main class="blogs-page">
-    <section class="main-introduce">
+  <main class="blog-page">
+    <section class="main-introduce pt-3 pt-lg-5">
       <div class="container">
-        <h1 class="text-black display-1">New and insights <br>
+        <h1 class="text-black display-1 pb-3 pb-lg-5">New and insights <br>
           <span class="text-black-50">form our experts</span>
         </h1>
         <div class="main-menu nav-menu ">
-          <ul class="nav-tabs nav-list nav nav-pills mb-3" role="tablist">
+          <ul class="nav-tabs nav-list nav nav-pills pb-4 pb-lg-0" role="tablist">
             <li class="nav-item item nav-text nav-mark " role="presentation">
               <button class="nav-link active" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button"
                 role="tab" aria-controls="pills-contact" aria-selected="false">All Articles
@@ -123,15 +123,15 @@
       </div>
     </section>
     <!-- service -->
-    <section class="service">
+    <section class="service pt-3 pt-lg-5">
       <div class="container">
-        <div class="row row-cols-md-2 gap-2 flex-md-nowrap">
+        <div class="row row-cols-md-2 gap-2 flex-md-nowrap pt-3 pt-lg-5">
           <div class="service-left d-flex col-12 col-md-6 mb-md-0 ">
             <div class="card w-100 mb-md-0">
-              <h3 class="card-header">SERVICE</h3>
+              <h3 class="card-header mb-0">SERVICE</h3>
               <div class="card-body">
                 <h4 class="card-text">
-                  <a class="text-black" href="#">
+                  <a class="text-black display-2" href="#">
                     CRM insights: Selecting the Right One for Your Organization
                   </a>
                 </h4>
@@ -154,8 +154,9 @@
         </div>
       </div>
     </section>
+
     <!-- products -->
-    <section class="product">
+    <section class="product pt-3 pt-lg-5">
       <div class="container">
         <div class="product-content row row-cols-md-2 row-cols-lg-3">
           <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
@@ -171,7 +172,7 @@
               </picture>
               <div class="card-body">
                 <h4 class="card-text">
-                  <a class="text-black" href="#">
+                  <a class="text-black display-5" href="#">
                     How To Deliver a Successful Product Launch
                   </a>
                 </h4>
@@ -192,7 +193,7 @@
               </picture>
               <div class="card-body">
                 <h4 class="card-text">
-                  <a class="text-black" href="#">
+                  <a class="text-black display-5" href="#">
                     The best cities for sales careers in 2022
                   </a>
                 </h4>
@@ -213,7 +214,7 @@
               </picture>
               <div class="card-body">
                 <h4 class="card-text">
-                  <a class="text-black" href="#">
+                  <a class="text-black display-5" href="#">
                     How to use 360 feedback to improve sales performance
                   </a>
                 </h4>
@@ -234,7 +235,7 @@
               </picture>
               <div class="card-body">
                 <h4 class="card-text">
-                  <a class="text-black" href="#">
+                  <a class="text-black display-5" href="#">
                     The Challenger Sale model: How to lead the conversation
                   </a>
                 </h4>
@@ -255,7 +256,7 @@
               </picture>
               <div class="card-body">
                 <h4 class="card-text">
-                  <a class="text-black" href="#">
+                  <a class="text-black display-5" href="#">
                     3 ways To automate your lead generation process with Yoora
                   </a>
                 </h4>
@@ -276,7 +277,7 @@
               </picture>
               <div class="card-body">
                 <h4 class="card-text">
-                  <a class="text-black" href="#">
+                  <a class="text-black display-5" href="#">
                     Marketplace Monthly Apps Spotlight: Aug 2022
                   </a>
                 </h4>
@@ -304,7 +305,9 @@
               </picture>
               <div class="card-body">
                 <h4 class="card-text">
-                  Email marketing best practices: 10 experts share their email tips
+                  <a class="text-black display-5"href="#">
+                    Email marketing best practices: 10 experts share their email tips
+                  </a>
                 </h4>
               </div>
               <p class="card-footer">
@@ -318,7 +321,9 @@
               <div class="card-horizontal-left">
                 <div class="card-body">
                   <h4 class="card-text">
+                    <a class="text-black display-5"href="#">
                     Access Yoora’s leads features on your mobile
+                    </a>
                   </h4>
                 </div>
                 <p class="card-footer">
@@ -332,7 +337,9 @@
               <div class="card-horizontal-left">
                 <div class="card-body">
                   <h4 class="card-text">
+                    <a class="text-black display-5"href="#">
                     Sales presentations: templates, examples and ideas on how to present like a pro
+                    </a>
                   </h4>
                 </div>
                 <p class="card-footer">
@@ -346,7 +353,9 @@
               <div class="card-horizontal-left">
                 <div class="card-body">
                   <h4 class="card-text">
-                    How To Deliver a Successful Product Launch
+                    <a class="text-black display-5"href="#">
+                      How To Deliver a Successful Product Launch
+                    </a>
                   </h4>
                 </div>
                 <p class="card-footer">
@@ -377,7 +386,7 @@
               </picture>
               <div class="card-body">
                 <h4 class="card-text">
-                  <a class="text-black" href="#">
+                  <a class="text-black display-5" href="#">
                     Sales Funnels: Definition, Process, Stages and Examples
                   </a>
                 </h4>
@@ -398,7 +407,7 @@
               </picture>
               <div class="card-body">
                 <h4 class="card-text">
-                  <a class="text-black" href="#">
+                  <a class="text-black display-5" href="#">
                     What is a sales Yoora and how do you build one?
                   </a>
                 </h4>
@@ -419,7 +428,7 @@
               </picture>
               <div class="card-body">
                 <h4 class="card-text">
-                  <a class="text-black" href="#">
+                  <a class="text-black display-5" href="#">
                     10 real estate cold calling scripts to increase lead generation
                   </a>
                 </h4>
@@ -446,11 +455,11 @@
           <div class="row row-cols-lg-2 d-lg-flex align-items-center justify-content-center">
             <div class="col-12 col-lg-7">
               <div class="cta-content p-5 p-lg-0">
-                  <h1 class="display-1">
+                  <h2 class="display-1">
                     <a href="#" class="text-white">
                       Ready to supercharge your business?
                     </a>
-                  </h1>
+                  </h2>
                   <p class="fs-5 text-white-50 pt-3 text-md">
                     Ask about Yoora products, pricing, implementation, or anything else.Our highly trained reps are standing by, ready to help.
                   </p>
