--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -27,8 +27,7 @@
         <a class="navbar-brand me-5 col-lg-auto" href="../practice-02/index.html">
           <img src="./img/logo.png" alt="logo">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
-          aria-controls="offcanvasNavbar">
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
@@ -83,38 +82,32 @@
         <div class="main-menu nav-menu ">
           <ul class="nav-tabs nav-list nav nav-pills pb-4 pb-lg-0" role="tablist">
             <li class="nav-item item nav-text nav-mark " role="presentation">
-              <button class="nav-link active" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button"
-                role="tab" aria-controls="pills-contact" aria-selected="false">All Articles
+              <button class="nav-link active" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">All Articles
               </button>
               <img class=shape src="./img/header__Shape.png" alt="icon shape">
             </li>
             <li class="nav-item item nav-text" role="presentation">
-              <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab"
-                aria-controls="pills-contact" aria-selected="false">
+              <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">
                 Sales
               </button>
             </li>
             <li class="nav-item item nav-text" role="presentation">
-              <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab"
-                aria-controls="pills-contact" aria-selected="false">
+              <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">
                 Marketing
               </button>
             </li>
             <li class="nav-item item nav-text" role="presentation">
-              <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab"
-                aria-controls="pills-contact" aria-selected="false">
+              <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">
                 Service
               </button>
             </li>
             <li class="nav-item item nav-text" role="presentation">
-              <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab"
-                aria-controls="pills-contact" aria-selected="false">
+              <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">
                 Product
               </button>
             </li>
             <li class="nav-item item nav-text" role="presentation">
-              <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab"
-                aria-controls="pills-contact" aria-selected="false">
+              <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">
                 New
               </button>
             </li>
@@ -369,6 +362,7 @@
         </div>
       </div>
     </section>
+
     <!-- article -->
     <section class="article product">
       <div class="container">
