--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -32,7 +32,7 @@
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title display-5" id="offcanvasNavbarLabel">Yoora menu</h5>
+            <h5 class="offca card-text display-5" id="offcanvasNavbarLabel">Yoora menu</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body col-lg-auto">
@@ -123,8 +123,8 @@
             <div class="card w-100 mb-md-0">
               <h3 class="card-header mb-0">SERVICE</h3>
               <div class="card-body">
-                <h4 class="card-text">
-                  <a class="text-black display-2" href="#">
+                <h4>
+                  <a class="card-text display-2" href="#">
                     CRM insights: Selecting the Right One for Your Organization
                   </a>
                 </h4>
@@ -164,8 +164,8 @@
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
-                <h4 class="card-text">
-                  <a class="text-black display-5" href="#">
+                <h4>
+                  <a class=" card-text display-5" href="#">
                     How To Deliver a Successful Product Launch
                   </a>
                 </h4>
@@ -185,8 +185,8 @@
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
-                <h4 class="card-text">
-                  <a class="text-black display-5" href="#">
+                <h4>
+                  <a class=" card-text display-5" href="#">
                     The best cities for sales careers in 2022
                   </a>
                 </h4>
@@ -206,8 +206,8 @@
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
-                <h4 class="card-text">
-                  <a class="text-black display-5" href="#">
+                <h4>
+                  <a class=" card-text display-5" href="#">
                     How to use 360 feedback to improve sales performance
                   </a>
                 </h4>
@@ -227,8 +227,8 @@
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
-                <h4 class="card-text">
-                  <a class="text-black display-5" href="#">
+                <h4>
+                  <a class=" card-text display-5" href="#">
                     The Challenger Sale model: How to lead the conversation
                   </a>
                 </h4>
@@ -248,8 +248,8 @@
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
-                <h4 class="card-text">
-                  <a class="text-black display-5" href="#">
+                <h4>
+                  <a class=" card-text display-5" href="#">
                     3 ways To automate your lead generation process with Yoora
                   </a>
                 </h4>
@@ -269,8 +269,8 @@
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
-                <h4 class="card-text">
-                  <a class="text-black display-5" href="#">
+                <h4>
+                  <a class=" card-text display-5" href="#">
                     Marketplace Monthly Apps Spotlight: Aug 2022
                   </a>
                 </h4>
@@ -297,8 +297,8 @@
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
-                <h4 class="card-text">
-                  <a class="text-black display-5"href="#">
+                <h4>
+                  <a class=" card-text display-5"href="#">
                     Email marketing best practices: 10 experts share their email tips
                   </a>
                 </h4>
@@ -313,8 +313,8 @@
             <div class="card card-horizontal">
               <div class="card-horizontal-left">
                 <div class="card-body">
-                  <h4 class="card-text">
-                    <a class="text-black display-5"href="#">
+                  <h4>
+                    <a class=" card-text display-5"href="#">
                     Access Yoora’s leads features on your mobile
                     </a>
                   </h4>
@@ -329,8 +329,8 @@
             <div class="card card-horizontal">
               <div class="card-horizontal-left">
                 <div class="card-body">
-                  <h4 class="card-text">
-                    <a class="text-black display-5"href="#">
+                  <h4>
+                    <a class=" card-text display-5"href="#">
                     Sales presentations: templates, examples and ideas on how to present like a pro
                     </a>
                   </h4>
@@ -345,8 +345,8 @@
             <div class="card card-horizontal">
               <div class="card-horizontal-left">
                 <div class="card-body">
-                  <h4 class="card-text">
-                    <a class="text-black display-5"href="#">
+                  <h4>
+                    <a class=" card-text display-5"href="#">
                       How To Deliver a Successful Product Launch
                     </a>
                   </h4>
@@ -379,8 +379,8 @@
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
-                <h4 class="card-text">
-                  <a class="text-black display-5" href="#">
+                <h4>
+                  <a class=" card-text display-5" href="#">
                     Sales Funnels: Definition, Process, Stages and Examples
                   </a>
                 </h4>
@@ -400,8 +400,8 @@
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
-                <h4 class="card-text">
-                  <a class="text-black display-5" href="#">
+                <h4>
+                  <a class=" card-text display-5" href="#">
                     What is a sales Yoora and how do you build one?
                   </a>
                 </h4>
@@ -421,8 +421,8 @@
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
-                <h4 class="card-text">
-                  <a class="text-black display-5" href="#">
+                <h4>
+                  <a class=" card-text display-5" href="#">
                     10 real estate cold calling scripts to increase lead generation
                   </a>
                 </h4>
