--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -27,7 +27,7 @@
         <a class="navbar-brand me-5 col-lg-auto" href="../practice-02/index.html">
           <img src="./img/logo.png" alt="logo">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-label="Open canvas" aria-controls="offcanvasNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
@@ -53,10 +53,8 @@
                 <a class="nav-link active" aria-current="page" href="#">Contact</a>
               </li>
             </ul>
-            <button type="button" class="btn btn-primary me-2">Log In</button>
-            <button type="button" class="btn btn-secondary">
-              Try for Free
-            </button>
+            <button type="button" class="btn btn-primary me-2" aria-label="Log in">Log In</button>
+            <button type="button" class="btn btn-secondary" aria-label="Create account">Try for Free </button>
           </div>
         </div>
       </nav>
