--- a/practice-03/pricing.html
+++ b/practice-03/pricing.html
@@ -26,7 +26,7 @@
         <a class="navbar-brand me-5 col-lg-auto" href="../practice-02/index.html">
           <img src="./img/logo.png" alt="logo">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-label="Open canvas" aria-controls="offcanvasNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
@@ -72,7 +72,7 @@
       <!-- introduce -->
       <section class="main-introduce pt-3 pt-lg-5 pb-3 pb-lg-4">
           <div class="container">
-              <div class=" row-cols-lg-2 d-lg-flex justify-content-between align-items-end  " tabindex="-1">
+              <div class=" row-cols-lg-2 d-lg-flex justify-content-between align-items-end" tabindex="-1">
                   <h1 class="display-1 col-md-7 col-lg-6 text-black-50 pb-3 pb-lg-0">
                       <a class="text-black">Choose the right plan</a> for your business
                   </h1>
@@ -99,10 +99,10 @@
               </div>
               <!-- card-body -->
               <div class="card-body pb-lg-3">
-                <h1 class="card-title pricing-card-title mb-3 pt-lg-4">
+                <h3 class="card-title pricing-card-title mb-3 pt-lg-4">
                   <strong class="display-1"> $8,90 </strong>
                   <small class="text-muted">/month</small>
-                </h1>
+                </h3>
                 <button type="button" class="w-100 btn btn-lg btn-primary mb-3">
                   Try for Free
                 </button>
@@ -178,10 +178,10 @@
               </div>
               <!-- card-body -->
               <div class="card-body pb-lg-3">
-                <h1 class="card-title pricing-card-title mb-3 pt-lg-4">
+                <h3 class="card-title pricing-card-title mb-3 pt-lg-4">
                   <strong class="display-1">$29,90 </strong>
                   <small class="text-muted">/month</small>
-                </h1>
+                </h3>
                 <button type="button" class="w-100 btn btn-lg btn-primary mb-3">
                   Try for Free
                 </button>
@@ -249,10 +249,10 @@
               </div>
               <!-- card-body -->
               <div class="card-body pb-lg-3">
-                <h1 class="card-title pricing-card-title mb-3 pt-lg-4">
+                <h3 class="card-title pricing-card-title mb-3 pt-lg-4">
                   <strong class="display-1">$39,90 </strong>
                   <small class="text-muted">/month</small>
-                </h1>
+                </h3>
                 <button type="button" class="w-100 btn btn-lg btn-primary mb-3">
                   Try for Free
                 </button>
@@ -415,11 +415,11 @@
         <div class="row row-cols-lg-2 d-lg-flex align-items-center justify-content-center">
           <div class="col-12 col-lg-7">
             <div class="cta-content p-5 p-lg-0">
-                <h1 class="display-1">
+                <h3 class="display-1">
                   <a href="#" class="text-white">
                     Ready to supercharge your business?
                   </a>
-                </h1>
+                </h3>
                 <p class="fs-5 text-white-50 pt-3 text-md">
                   Ask about Yoora products, pricing, implementation, or anything else.Our highly trained reps are standing by, ready to help.
                 </p>
