REFACTOR: Refactor format accordion

--- a/practice-03/pricing.html
+++ b/practice-03/pricing.html
@@ -74,7 +74,7 @@
           <div class="container">
               <div class=" row-cols-lg-2 d-lg-flex justify-content-between align-items-end" tabindex="-1">
                   <h1 class="display-1 col-md-7 col-lg-6 text-black-50 pb-3 pb-lg-0">
-                      <a class="text-black">Choose the right plan</a> for your business
+                      <a class="text-black">Choose the right plan for your business</a>
                   </h1>
                   <p class="fs-6 col-lg-3 pn-5 pb-lg-0">
                       Built with love for growing businesses. Check out the Yoora CRM pricing grid below. Switch between plans at any time.
@@ -415,11 +415,11 @@
         <div class="row row-cols-lg-2 d-lg-flex align-items-center justify-content-center">
           <div class="col-12 col-lg-7">
             <div class="cta-content p-5 p-lg-0">
-                <h3 class="display-1">
+                <h2 class="display-2">
                   <a href="#" class="text-white">
                     Ready to supercharge your business?
                   </a>
-                </h3>
+                </h2>
                 <p class="fs-5 text-white-50 pt-3 text-md">
                   Ask about Yoora products, pricing, implementation, or anything else.Our highly trained reps are standing by, ready to help.
                 </p>
@@ -520,9 +520,9 @@
             <hr class="divider mt-lg-5 mb-lg-5">
             <div class="row row-cols-lg-3 align-items-center justify-content-start gap-4 gap-lg-0">
               <div class="col-12 col-lg-4">
-                <h3 class="fs-6 ">
+                <h2 class="fs-6 ">
                   <a class="text-black-50" href="__blank">&#169;Copyright 2022 Yoora, Inc.</a>
-                </h3>
+                </h2>
               </div>
               <div class="col-12 col-lg-4 ">
                 <ul class="row gap-3 d-lg-flex flex-column flex-lg-row flex-lg-nowrap ">
