--- a/practice-03/pricing.html
+++ b/practice-03/pricing.html
@@ -74,7 +74,7 @@
           <div class="container">
               <div class=" row-cols-lg-2 d-lg-flex justify-content-between align-items-end" tabindex="-1">
                   <h1 class="display-1 col-md-7 col-lg-6 text-black-50 pb-3 pb-lg-0">
-                      <a class="text-black">Choose the right plan for your business</a>
+                      <a class="text-black" href="#">Choose the right plan for your business</a>
                   </h1>
                   <p class="fs-6 col-lg-3 pn-5 pb-lg-0">
                       Built with love for growing businesses. Check out the Yoora CRM pricing grid below. Switch between plans at any time.
@@ -100,7 +100,7 @@
               <!-- card-body -->
               <div class="card-body pb-lg-3">
                 <h3 class="card-title pricing-card-title mb-3 pt-lg-4">
-                  <strong class="display-1"> $8,90 </strong>
+                  <strong class="fs-1"> $8,90</strong>
                   <small class="text-muted">/month</small>
                 </h3>
                 <button type="button" class="w-100 btn btn-lg btn-primary mb-3">
@@ -179,7 +179,7 @@
               <!-- card-body -->
               <div class="card-body pb-lg-3">
                 <h3 class="card-title pricing-card-title mb-3 pt-lg-4">
-                  <strong class="display-1">$29,90 </strong>
+                  <strong class="fs-1">$29,90</strong>
                   <small class="text-muted">/month</small>
                 </h3>
                 <button type="button" class="w-100 btn btn-lg btn-primary mb-3">
@@ -250,7 +250,7 @@
               <!-- card-body -->
               <div class="card-body pb-lg-3">
                 <h3 class="card-title pricing-card-title mb-3 pt-lg-4">
-                  <strong class="display-1">$39,90 </strong>
+                  <strong class="fs-1">$39,90</strong>
                   <small class="text-muted">/month</small>
                 </h3>
                 <button type="button" class="w-100 btn btn-lg btn-primary mb-3">
