REFACTOR: Refactor format accordion

--- a/practice-03/pricing.html
+++ b/practice-03/pricing.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
   <!-- index CSS -->
   <link rel="stylesheet" href="./styles/index.css" />
+  <link rel="stylesheet" href="./styles/pages/pricing.css">
 </head>
 
 <body>
@@ -68,20 +69,20 @@
   <!-------------------
      main
     --------------------->
-    <main class="pricing-page">
-      <!-- introduce -->
-      <section class="main-introduce pt-3 pt-lg-5 pb-3 pb-lg-4">
-          <div class="container">
-              <div class=" row-cols-lg-2 d-lg-flex justify-content-between align-items-end" tabindex="-1">
-                  <h1 class="display-1 col-md-7 col-lg-6 text-black-50 pb-3 pb-lg-0">
-                      <a class="text-black" href="#">Choose the right plan for your business</a>
-                  </h1>
-                  <p class="fs-6 col-lg-3 pn-5 pb-lg-0">
-                      Built with love for growing businesses. Check out the Yoora CRM pricing grid below. Switch between plans at any time.
-                  </p>
-              </div>
-          </div>
-      </section>
+  <main class="pricing-page">
+    <!-- introduce -->
+    <section class="main-introduce pt-3 pt-lg-5 pb-3 pb-lg-4">
+        <div class="container">
+            <div class=" row-cols-lg-2 d-lg-flex justify-content-between align-items-end" tabindex="-1">
+                <h1 class="display-1 col-md-7 col-lg-6 text-black-50 pb-3 pb-lg-0">
+                    <a class="text-black" href="#">Choose the right plan for your business</a>
+                </h1>
+                <p class="fs-6 col-lg-3 pb-lg-0">
+                    Built with love for growing businesses. Check out the Yoora CRM pricing grid below. Switch between plans at any time.
+                </p>
+            </div>
+        </div>
+    </section>
     <!--Choose type plan  -->
     <section class="package pt-3 pt-lg-5 pb-3">
       <!-- plan-card -->
@@ -397,7 +398,7 @@
           </article>
         </div>
     </div>
-  </section>
+
   </main>
 
   <!-------------------
@@ -415,7 +416,7 @@
         <div class="row row-cols-lg-2 d-lg-flex align-items-center justify-content-center">
           <div class="col-12 col-lg-7">
             <div class="cta-content p-5 p-lg-0">
-                <h2 class="display-2">
+                <h2 class="display-1">
                   <a href="#" class="text-white">
                     Ready to supercharge your business?
                   </a>
