--- a/practice-03/pricing.html
+++ b/practice-03/pricing.html
@@ -397,8 +397,8 @@
               </div>
           </article>
         </div>
-    </div>
-
+      </div>
+    </section>
   </main>
 
   <!-------------------
