--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -25,7 +25,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg row-cols-lg-2 py-3">
         <a class="navbar-brand me-5 col-lg-auto" href="../practice-02/index.html">
-          <img src="./img/logo.png" alt="logo">
+          <img src="./imgx/logo.png" alt="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-label="Open canvas" aria-controls="offcanvasNavbar">
           <span class="navbar-toggler-icon"></span>
@@ -82,7 +82,7 @@
             <li class="nav-item item nav-text nav-mark " role="presentation">
               <button class="nav-link active" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">All Articles
               </button>
-              <img class=shape src="./img/header__Shape.png" alt="icon shape">
+              <img class=shape src="./imgx/arrow-down.png" alt="icon shape">
             </li>
             <li class="nav-item item nav-text" role="presentation">
               <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">
@@ -135,10 +135,10 @@
           <div class="service-right col-12 col-md-6">
             <picture>
               <!-- mobile -->
-              <source media="(max-width:768px)" srcset="./img/service_img-0.5.jpg">
+              <source media="(max-width:768px)" srcset="./imgx/service-img-0.5.jpg">
               <!-- desktop -->
-              <source media="(min-width:768px)" srcset="./img/service_img-1.5.jpg">
-              <img src="./img/service_img-0.5.jpg" alt="This is the service's photo" class="service-img"
+              <source media="(min-width:768px)" srcset="./imgx/service-img-1.5.jpg">
+              <img src="./imgx/service-img-0.5.jpg" alt="This is the service's photo" class="service-img"
                 sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
             </picture>
           </div>
@@ -155,10 +155,10 @@
               <h3 class="card-header">New</h3>
               <picture>
                 <!-- mobile -->
-                <source media="(max-width:768px)" srcset="./img/product_img1-0.5.jpg ">
+                <source media="(max-width:768px)" srcset="./imgx/product-img1-0.5.jpg ">
                 <!-- desktop -->
-                <source media="(min-width:768px)" srcset="./img/product_img1-1.5.jpg ">
-                <img src="./img/product_img1-0.5.jpg" alt="Here is a photo of the product title above"
+                <source media="(min-width:768px)" srcset="./imgx/product-img1-1.5.jpg ">
+                <img src="./imgx/product-img1-0.5.jpg" alt="Here is a photo of the product title above"
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
@@ -176,10 +176,10 @@
               <h3 class="card-header">Sales</h3>
               <picture>
                 <!-- mobile -->
-                <source media="(max-width:768px)" srcset="./img/product_img2-0.5.jpg">
+                <source media="(max-width:768px)" srcset="./imgx/product-img2-0.5.jpg">
                 <!-- desktop -->
-                <source media="(min-width:768px)" srcset="./img/product_img2-1.5.jpg ">
-                <img src="./img/product_img2-0.5.jpg" alt="Here is a photo of the product title above"
+                <source media="(min-width:768px)" srcset="./imgx/product-img2-1.5.jpg ">
+                <img src="./imgx/product-img2-0.5.jpg" alt="Here is a photo of the product title above"
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
@@ -197,10 +197,10 @@
               <h3 class="card-header">Sales</h3>
               <picture>
                 <!-- mobile -->
-                <source media="(max-width:768px)" srcset="./img/product_img3-0.5.jpg">
+                <source media="(max-width:768px)" srcset="./imgx/product-img3-0.5.jpg">
                 <!-- desktop -->
-                <source media="(min-width:768px)" srcset="./img/product_img3-1.5.jpg ">
-                <img src="./img/product_img3-0.5.jpg" alt="Here is a photo of the product title above"
+                <source media="(min-width:768px)" srcset="./imgx/product-img3-1.5.jpg ">
+                <img src="./imgx/product-img3-0.5.jpg" alt="Here is a photo of the product title above"
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
@@ -218,10 +218,10 @@
               <h3 class="card-header">Sales</h3>
               <picture>
                 <!-- mobile -->
-                <source media="(max-width:768px)" srcset="./img/product_img4-0.5.jpg">
+                <source media="(max-width:768px)" srcset="./imgx/product-img4-0.5.jpg">
                 <!-- desktop -->
-                <source media="(min-width:768px)" srcset="./img/product_img4-1.5.jpg ">
-                <img src="./img/product_img4-0.5.jpg" alt="Here is a photo of the product title above"
+                <source media="(min-width:768px)" srcset="./imgx/product-img4-1.5.jpg ">
+                <img src="./imgx/product-img4-0.5.jpg" alt="Here is a photo of the product title above"
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
@@ -239,10 +239,10 @@
               <h3 class="card-header">Product</h3>
               <picture>
                 <!-- mobile -->
-                <source media="(max-width:768px)" srcset="./img/product_img5-0.5.jpg">
+                <source media="(max-width:768px)" srcset="./imgx/product-img5-0.5.jpg">
                 <!-- desktop -->
-                <source media="(min-width:768px)" srcset="./img/product_img5-1.5.jpg ">
-                <img src="./img/product_img5-0.5.jpg" alt="Here is a photo of the product title above"
+                <source media="(min-width:768px)" srcset="./imgx/product-img5-1.5.jpg ">
+                <img src="./imgx/product-img5-0.5.jpg" alt="Here is a photo of the product title above"
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
@@ -260,10 +260,10 @@
               <h3 class="card-header">Product</h3>
               <picture>
                 <!-- mobile -->
-                <source media="(max-width:768px)" srcset="./img/product_img6-0.5.jpg">
+                <source media="(max-width:768px)" srcset="./imgx/product-img6-0.5.jpg">
                 <!-- desktop -->
-                <source media="(min-width:768px)" srcset="./img/product_img6-1.5.jpg ">
-                <img src="./img/product_img6-0.5.jpg" alt="Here is a photo of the product title above"
+                <source media="(min-width:768px)" srcset="./imgx/product-img6-1.5.jpg ">
+                <img src="./imgx/product-img6-0.5.jpg" alt="Here is a photo of the product title above"
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
@@ -288,10 +288,10 @@
               <h3 class="card-header">Marketing</h3>
               <picture>
                 <!-- mobile -->
-                <source media="(max-width:768px)" srcset="./img/marketing-0.5.jpg">
+                <source media="(max-width:768px)" srcset="./imgx/marketing-img-0.5.jpg">
                 <!-- desktop -->
-                <source media="(min-width:768px)" srcset="./img/marketing-1.5.jpg ">
-                <img src="./img/marketing-0.5.jpg" alt="Here is a photo of the marketing title above"
+                <source media="(min-width:768px)" srcset="./imgx/marketing-img-1.5.jpg ">
+                <img src="./imgx/marketing-img-0.5.jpg" alt="Here is a photo of the marketing title above"
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
@@ -370,10 +370,10 @@
               <h3 class="card-header">SERVICE</h3>
               <picture>
                 <!-- mobile -->
-                <source media="(max-width:768px)" srcset="./img/product_img7-0.5.jpg">
+                <source media="(max-width:768px)" srcset="./imgx/product-img7-0.5.jpg">
                 <!-- desktop -->
-                <source media="(min-width:768px)" srcset="./img/product_img7-1.5.jpg ">
-                <img src="./img/product_img7-0.5.jpg" alt="Here is a photo of the product title above"
+                <source media="(min-width:768px)" srcset="./imgx/product-img7-1.5.jpg ">
+                <img src="./imgx/product-img7-0.5.jpg" alt="Here is a photo of the product title above"
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
@@ -391,10 +391,10 @@
               <h3 class="card-header">SALES</h3>
               <picture>
                 <!-- mobile -->
-                <source media="(max-width:768px)" srcset="./img/product_img8-0.5.jpg">
+                <source media="(max-width:768px)" srcset="./imgx/product-img8-0.5.jpg">
                 <!-- desktop -->
-                <source media="(min-width:768px)" srcset="./img/product_img8-1.5.jpg ">
-                <img src="./img/product_img8-0.5.jpg" alt="Here is a photo of the product title above"
+                <source media="(min-width:768px)" srcset="./imgx/product-img8-1.5.jpg ">
+                <img src="./imgx/product-img8-0.5.jpg" alt="Here is a photo of the product title above"
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
@@ -412,10 +412,10 @@
               <h3 class="card-header">SERVICE</h3>
               <picture>
                 <!-- mobile -->
-                <source media="(max-width:768px)" srcset="./img/product_img9-0.5.jpg">
+                <source media="(max-width:768px)" srcset="./imgx/product-img9-0.5.jpg">
                 <!-- desktop -->
-                <source media="(min-width:768px)" srcset="./img/product_img9-1.5.jpg ">
-                <img src="./img/product_img9-0.5.jpg" alt="Here is a photo of the product title above"
+                <source media="(min-width:768px)" srcset="./imgx/product-img9-1.5.jpg ">
+                <img src="./imgx/product-img9-0.5.jpg" alt="Here is a photo of the product title above"
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
@@ -478,7 +478,7 @@
               <div class="card p-0">
                 <div class="card-header mt-3 mt-lg-0">
                   <a href="#" class="logo">
-                    <img src="./img/logo.png" alt="logo">
+                    <img src="./imgx/logo.png" alt="logo">
                   </a>
                 </div>
                 <div class="card-body mt-3">
@@ -489,13 +489,13 @@
                 <div class="card-footer mt-3">
                   <ul class="d-flex ">
                     <li>
-                      <a class="me-3" href="https://twitter.com/"><img src="./img/Twitter.png" alt="Here is a logo of the media above"></a>
+                      <a class="me-3" href="https://twitter.com/"><img src="./imgx/media-Twitter.png" alt="Here is a logo of the media above"></a>
                     </li>
                     <li>
-                      <a class="me-3" href="https://www.facebook.com/"> <img src="./img/Facebook.png" alt="Here is a logo of the media above"></a>
+                      <a class="me-3" href="https://www.facebook.com/"> <img src="./imgx/media-Facebook.png" alt="Here is a logo of the media above"></a>
                     </li>
                     <li>
-                      <a href="https://www.linkedin.com/"> <img src="./img/Linkedin.png" alt="Here is a logo of the media above"></a>
+                      <a href="https://www.linkedin.com/"> <img src="./imgx/media-Linkedin.png" alt="Here is a logo of the media above"></a>
                     </li>
                   </ul>
                 </div>
