--- a/practice-03/pricing.html
+++ b/practice-03/pricing.html
@@ -114,49 +114,49 @@
               <div class="card-footer">
                 <ul class="list mt-3 mb-4">
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>2 team members</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>1,000 Contacts & Companies</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>5 Campaign Workflows</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>10 Nodes Per Campaign</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>5 Automation Rules (Triggers)</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>3 Plugins/Integrations</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center opacity-25">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p class="text-decoration-line-through text-black-50">
                       Marketing Automation
                     </p>
                   </li>
                   <li class="mb-3 d-flex align-items-center opacity-25">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p class="text-decoration-line-through text-black-50">
                       Custom Deal Tracks
                     </p>
                   </li>
                   <li class="mb-3 d-flex align-items-center opacity-25">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p class="text-decoration-line-through text-black-50">
                       Automated Voicemails
                     </p>
                   </li>
                   <li class="mb-3 d-flex align-items-center opacity-25">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p class="text-decoration-line-through text-black-50">
                       Post-call Automation
                     </p>
@@ -170,7 +170,7 @@
               <div class="card-header mt-2 py-3">
                 <h3 class="my-0 display-3">Professional
                   <span class="badge bg-success bg-opacity-10 text-uppercase fs-6"
-                    style="color: var(--alienated)">Recommended
+                    style="color: var(--primary)">Recommended
                   </span>
                 </h3>
                 <p class="mt-2 fs-5">
@@ -193,45 +193,45 @@
               <div class="card-footer">
                 <ul class="list mt-3 mb-4">
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>10 team members</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>2,500 Contacts & Companies</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>5 Campaign Workflows</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>10 Nodes Per Campaigns</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>5 Automation Rules (Triggers)</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>3 Plugins/Integrations</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>Marketing Automation</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>Custom Deal Tracks</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center opacity-25">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p class="text-decoration-line-through text-black-50">
                       Automated Voicemails
                     </p>
                   </li>
                   <li class="mb-3 d-flex align-items-center opacity-25">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p class="text-decoration-line-through text-black-50">
                       Post-call Automation
                     </p>
@@ -264,43 +264,43 @@
               <div class="card-footer">
                 <ul class="list mt-3 mb-4">
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>Unlimited team members</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>Marketing Automation</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>25 Campaign Workflows</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>20 Nodes Per Campaigns</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>15 Automation Rules (Triggers)</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>10 Plugins/Integrations</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>Marketing Automation</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>Custom Deal Tracks</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>Automated Voicemails</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>Post-call Automation</p>
                   </li>
                 </ul>
