Fix comment : html5 tags in sync

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -72,7 +72,7 @@
    main
   --------------------->
   <main class="blog-page">
-    <section class="main-introduce pt-3 pt-lg-5">
+    <nav class="main-introduce pt-3 pt-lg-5">
       <div class="container">
         <h1 class="text-black display-1 pb-3 pb-lg-5">New and insights <br>
           <span class="text-black-50">form our experts</span>
@@ -112,7 +112,7 @@
           </ul>
         </div>
       </div>
-    </section>
+    </nav>
     <!-- service -->
     <section class="service pt-3 pt-lg-5">
       <div class="container">
@@ -469,7 +469,7 @@
         </div>
       </section>
       <!-- navigation -->
-      <section class="navigation mt-5">
+      <nav class="navigation mt-5">
         <div class="container">
           <!-- link -->
           <div class="row row-cols-lg-3">
@@ -574,7 +574,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </nav>
     </footer>
     <!-------------------
          footer end
