--- a/practice-03/pricing.html
+++ b/practice-03/pricing.html
@@ -438,7 +438,7 @@
       </div>
     </section>
     <!-- navigation -->
-    <section class="navigation mt-5">
+    <nav class="navigation mt-5">
       <div class="container">
         <!-- link -->
         <div class="row row-cols-lg-3">
@@ -543,7 +543,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </nav>
   </footer>
   <!-------------------
        footer end
