Update img /imgs

--- a/practice-03/pricing.html
+++ b/practice-03/pricing.html
@@ -25,7 +25,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg row-cols-lg-2 py-3">
         <a class="navbar-brand me-5 col-lg-auto" href="../practice-02/index.html">
-          <img src="./imgx/logo.png" alt="logo">
+          <img src="./imgs/logo.png" alt="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-label="Open canvas" aria-controls="offcanvasNavbar">
           <span class="navbar-toggler-icon"></span>
@@ -447,7 +447,7 @@
             <div class="card p-0">
               <div class="card-header mt-3 mt-lg-0">
                 <a href="#" class="logo">
-                  <img src="./imgx/logo.png" alt="logo">
+                  <img src="./imgs/logo.png" alt="logo">
                 </a>
               </div>
               <div class="card-body mt-3">
@@ -458,13 +458,13 @@
               <div class="card-footer mt-3">
                 <ul class="d-flex ">
                   <li>
-                    <a class="me-3" href="https://twitter.com/"><img src="./imgx/media-Twitter.png" alt="Here is a logo of the media above"></a>
+                    <a class="me-3" href="https://twitter.com/"><img src="./imgs/media-Twitter.png" alt="Here is a logo of the media above"></a>
                   </li>
                   <li>
-                    <a class="me-3" href="https://www.facebook.com/"> <img src="./imgx/media-Facebook.png" alt="Here is a logo of the media above"></a>
+                    <a class="me-3" href="https://www.facebook.com/"> <img src="./imgs/media-Facebook.png" alt="Here is a logo of the media above"></a>
                   </li>
                   <li>
-                    <a href="https://www.linkedin.com/"> <img src="./imgx/media-Linkedin.png" alt="Here is a logo of the media above"></a>
+                    <a href="https://www.linkedin.com/"> <img src="./imgs/media-Linkedin.png" alt="Here is a logo of the media above"></a>
                   </li>
                 </ul>
               </div>
